--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
         "dev": "node --watch index.js"
     },
     "dependencies": {
+        "@google/generative-ai": "^0.21.0",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
